<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_category">

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.newfoodappserver.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.newfoodappserver.ui.category.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_category" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_food_list"
        android:name="com.example.newfoodappserver.ui.food_list.FoodListFragment"
        android:label="@string/menu_food_list"
        tools:layout="@layout/fragment_food_list" >


        <action android:id="@+id/clearBackstack"
            app:launchSingleTop="true"
            app:popUpTo="@+id/nav_category"
            app:popUpToInclusive="true"/>




    </fragment>



    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.newfoodappserver.ui.order.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_shipper"
        android:name="com.example.newfoodappserver.ui.shipper.ShipperFragment"
        android:label="@string/menu_shipper"
        tools:layout="@layout/fragment_shipper" >


        <action android:id="@+id/clearBackstack"
            app:launchSingleTop="true"
            app:popUpTo="@+id/nav_category"
            app:popUpToInclusive="true"/>

    </fragment>


    <fragment
        android:id="@+id/nav_best_deals"
        android:name="com.example.newfoodappserver.ui.best_deals.BestDealsFragment"
        android:label="@string/menu_best_deals"
        tools:layout="@layout/best_deals_fragment" >


        <action android:id="@+id/clearBackstack"
            app:launchSingleTop="true"
            app:popUpTo="@+id/nav_category"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/nav_most_popular"
        android:name="com.example.newfoodappserver.ui.most_popular.MostPopularFragment"
        android:label="@string/menu_most_popular"
        tools:layout="@layout/most_popular_fragment" >


        <action android:id="@+id/clearBackstack"
            app:launchSingleTop="true"
            app:popUpTo="@+id/nav_category"
            app:popUpToInclusive="true"/>

    </fragment>


    <fragment
        android:id="@+id/nav_discount"
        android:name="com.example.newfoodappserver.ui.discount.DiscountFragment"
        android:label="@string/menu_discount"
        tools:layout="@layout/discount_fragment" >


        <action android:id="@+id/clearBackstack"
            app:launchSingleTop="true"
            app:popUpTo="@+id/nav_category"
            app:popUpToInclusive="true"/>

    </fragment>


</navigation>